# FluidSimulation

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
.github/workflows/: ci.yml
docs/: APP_FUNCTIONALITY.md  BUILD_AND_WORKFLOW.md  IMPLEMENTATION.md  OPTIMIZATION_ROUTES.md
external-dependencies/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
external-dependencies/docs/: Makefile
external-dependencies/examples/: Makefile
external-dependencies/glad/include/glad/: glad.h
external-dependencies/glfw-3.4/: CMakeLists.txt
external-dependencies/glfw-3.4/examples/: particles.c
external-dependencies/imgui-docking/: CMakeLists.txt
external-dependencies/src/: Makefile  cmake_install.cmake
external-dependencies/stb_image/include/stb_image/: stb_image.h
external-dependencies/tests/: Makefile
include/: Circle.h  demoShader.h
include/app/: controls.h
include/platform/: MetalSimulationBackend.h
include/render/: WaterRenderer.h
include/sim/: WaterSimulation.h
include/util/asset/: objLoader.h
include/util/gl/: demoShader.h
resources/: blur.frag  fragment.frag  vertex.vert
resources/shaders/: basin.frag  basin.vert  line_fragment.frag  water.frag  water.vert  water_simulation.metal
src/: Circle.cpp  demoShader.cpp  main.cpp  objLoader.cpp  openglDebug.cpp
src/app/: controls.cpp  main.cpp
src/platform/: MetalSimulationBackend.mm
src/render/: WaterRenderer.cpp
src/sim/: WaterSimulation.cpp
src/util/asset/: objLoader.cpp
src/util/gl/: demoShader.cpp  openglDebug.cpp
